flipper.css
.rectangleOn
{
	border-radius: 5px;
	background-color: RGB(150, 255, 160);
	border: 1px solid black;
	position: absolute;

	transition: 0.5s;
}

.rectangleOff
{
	border-radius: 5px;
	background-color: RGB(0, 125, 25);
	border: 1px solid black;
	position: absolute;

	transition: 0.5s;
}

.hint
{
	border-radius: 5px;
	background-color: RGB(128,128,128);
	border: 1px solid black;
	position: absolute;

	transition: 0.5s;
}

#gameArea
{	
	position:fixed;
	top: 50%;
	left: 50%;
	padding: 0px;
	margin: 0px;
}

#flipperBoard
{
	position: absolute;
	left: 0px;
}

#gameMenu
{
	position: absolute;
	right: 0px;
}

